k8s/website-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: website-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      component: web
  template:
    metadata:
      labels:
        component: web
    spec:
      containers:
        - name: web
          image: 072831431176.dkr.ecr.ap-southeast-1.amazonaws.com/rifqi.xyz:latest
          ports:
            - containerPort: 8000
