k8s/website-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: website-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: web
  ports: 
    - port: 8000
      targetPort: 8000
